[MCOMPILER-293] Add advice message in case automodules are used [MCOMPILER-286] Detect if dependencies should be added to classpath or modulepath
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-compiler-plugin@1791829 13f79535-47bb-0310-9956-ffa450edef68